--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    
    <section>
     <p>More projects on my GitHub</p>
-    <a href="https://gothub.com/Thundiverter" class="skillcard" style="background-color: #161B21; color: white; width: min-content; text-decoration: none;"><img :src="returnUrl('github.svg')" class="skillicon">GitHub</a>
+    <a href="https://github.com/Thundiverter" class="skillcard" style="background-color: #161B21; color: white; width: min-content; text-decoration: none;"><img :src="returnUrl('github.svg')" class="skillicon">GitHub</a>
    </section>
    
    <footer>
